Integrate weather station lib

--- a/platformio.ini
+++ b/platformio.ini
@@ -51,4 +51,7 @@ board_build.filesystem = littlefs
 lib_deps =
   bodmer/TFT_eSPI@~2.5.30
   bodmer/TJpg_Decoder@~1.0.8
+  bodmer/JSON_Decoder@~0.0.7
   https://github.com/Bodmer/OpenFontRender#96a29bc ; no tags or releases to reference :( -> pin to Git revision
+  ; squix78/WeatherStation@~2.1.0
+  https://github.com/ThingPulse/esp8266-weather-station#v2.2.0
