Switch to serial mode auto-detect

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,9 @@ board = esp-wrover-kit
 framework = arduino
 ; Adjust port and speed to your system and its capabilities e.g. "upload_port = COM3" on Windows.
 ; To list all availble ports you may also run 'pio device list' in the Visual Studio Code terminal window.
-upload_port = /dev/tty.wchusbserial54790238451
-monitor_port = /dev/tty.wchusbserial54790238451
+; In most cases you should be able to leave this commented out and thus rely on the auto-detect mode.
+; upload_port = /dev/tty.wchusbserial54790238451
+; monitor_port = /dev/tty.wchusbserial54790238451
 monitor_speed = 115200
 ; For your OS & driver combination you might have to lower this to 921600 or even 460800.
 upload_speed = 1500000
