Add clock sprite

--- a/platformio.ini
+++ b/platformio.ini
@@ -54,5 +54,4 @@ lib_deps =
   bodmer/TJpg_Decoder@~1.0.8
   bodmer/JSON_Decoder@~0.0.7
   https://github.com/Bodmer/OpenFontRender#96a29bc ; no tags or releases to reference :( -> pin to Git revision
-  ; squix78/WeatherStation@~2.1.0
-  https://github.com/ThingPulse/esp8266-weather-station#v2.2.0
+  thingpulse/ESP8266 Weather Station@~2.2.0
