Fix invalid reference to JSON parser
Our weather station lib requires the Squix parser.

--- a/platformio.ini
+++ b/platformio.ini
@@ -52,6 +52,6 @@ board_build.filesystem = littlefs
 lib_deps =
   bodmer/TFT_eSPI@~2.5.30
   bodmer/TJpg_Decoder@~1.0.8
-  bodmer/JSON_Decoder@~0.0.7
   https://github.com/Bodmer/OpenFontRender#f163cc6 ; no tags or releases to reference :( -> pin to Git revision
+  squix78/JsonStreamingParser@~1.0.5
   thingpulse/ESP8266 Weather Station@~2.2.0
