Rework part 1: task-based clock feed

--- a/platformio.ini
+++ b/platformio.ini
@@ -55,3 +55,4 @@ lib_deps =
   https://github.com/Bodmer/OpenFontRender#f163cc6 ; no tags or releases to reference :( -> pin to Git revision
   squix78/JsonStreamingParser@~1.0.5
   thingpulse/ESP8266 Weather Station@~2.2.0
+  arkhipenko/TaskScheduler@~3.7.0
