Add a few consistency fixes
Fixes #6

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,6 +34,7 @@ build_flags =
   -D TFT_DC=2
   -D TFT_RST=4
   -D TFT_BL=32
+  -D TOUCH_CS=21
   ; As we're using OpenFontRender we don't need any of the TFT_eSPI built-in fonts.
   ; Font descriptions at TFT_eSPI/User_Setups/Setup21_ILI9488.h
   -D LOAD_GLCD=0
